<resources>
    <string name="app_name">Bank Registration Project</string>
    <string name="heading">First of the few steps to set \nyou up with a Bank Account</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="bottom_msg"><![CDATA[Providing PAN & Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. Learn more]]></string>
    <string name="enter_pan_number">Enter PAN Number</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="next">NEXT</string>
    <string name="i_don_t_have_a_pan">I don\'t have a PAN</string>
</resources>